fix problem with images

--- a/using-bootstrap/landing-page/src/components/ScheduleSection/ScheduleSection.scss
+++ b/using-bootstrap/landing-page/src/components/ScheduleSection/ScheduleSection.scss
@@ -1,12 +1,9 @@
 .avatar {
-  background-size: 90px 65px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #3BB6D8;
-  background-blend-mode: multiply;
+  width: 70px;
+  height: 70px;
 }
 
-a, a:hover{
+a, a:hover {
   text-decoration: none;
   color: #212529;
 }
