--- a/custom-styles/sign-up-form/src/components/SignupForm/SignupForm.scss
+++ b/custom-styles/sign-up-form/src/components/SignupForm/SignupForm.scss
@@ -1,60 +1,49 @@
-h1 {
-  color:#3AAF9F;
-  font-family: 'Neuton', serif;
-}
-
-p {
-  color: #A5A9A8;
+.signup-form__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .inner-addon {
   position: relative;
 }
 
-.img {
-  width: 50px;
-  height: 50px;
+.input-icon {
+  left: 15px;
+  top: 10px;
+  width: 25px;
+  height: 25px;
   position: absolute;
   padding: 10px;
   pointer-events: none;
 }
 
-.img { left:  20px;}
-
-.left-addon input  { padding-left:  50px; }
-
-.form-control {
-  width: 100%;
-  height: 50px;
-  border-radius: 0;
-  border: none;
-  background-color: #F4F8F7;
+.left-addon input {
+  padding-left: 63px;
 }
 
-.btn-lg {
-  font-family: 'Neuton', serif;
-  font-size: 26px;
-  height: 70px;
-  border-radius: 30px;
-  background: #3AAF9F;
-}
-
-.social-media-icons {
+.signup-form__social-media-icons {
   padding: 0;
+  margin-bottom: 30px;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
   li {
     list-style: none;
     margin-right: 10px;
-    padding-top: 20px;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 60px;
     height: 60px;
     background: white;
     border-radius: 50%;
     border: 1px solid #d6d6d6;
     font-size: 1.3rem;
-    line-height: 1.3rem;
     transition: .3s;
   }
 
@@ -63,23 +52,23 @@ p {
   }
 }
 
-li.google {
-  &:hover{
-    background: darken(white,6%);
+li.signup-form__google-icon {
+  &:hover {
+    background: darken(white, 6%);
     cursor: pointer;
   }
 }
 
-li.facebook {
-  &:hover{
-    background: darken(white,6%);
+li.signup-form__facebook-icon {
+  &:hover {
+    background: darken(white, 6%);
     cursor: pointer;
   }
 }
 
-li.twitter {
-  &:hover{
-    background: darken(white,6%);
+li.signup-form__twitter-icon {
+  &:hover {
+    background: darken(white, 6%);
     cursor: pointer;
   }
 }
