--- a/custom-styles/sign-up-form/src/components/SignupForm/SignupForm.scss
+++ b/custom-styles/sign-up-form/src/components/SignupForm/SignupForm.scss
@@ -1,15 +1,15 @@
-.signup-form__container {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.inner-addon {
+.innerAddon {
   position: relative;
 }
 
-.input-icon {
+.inputIcon {
   left: 15px;
   top: 10px;
   width: 25px;
@@ -19,11 +19,11 @@
   pointer-events: none;
 }
 
-.left-addon input {
+.leftAddon input {
   padding-left: 63px;
 }
 
-.signup-form__social-media-icons {
+.socialMediaContainer {
   padding: 0;
   margin-bottom: 30px;
   text-align: center;
@@ -52,23 +52,28 @@
   }
 }
 
-li.signup-form__google-icon {
+li.googlePlusIcon {
   &:hover {
     background: darken(white, 6%);
     cursor: pointer;
   }
 }
 
-li.signup-form__facebook-icon {
+li.facebookIcon {
   &:hover {
     background: darken(white, 6%);
     cursor: pointer;
   }
 }
 
-li.signup-form__twitter-icon {
+li.twitterIcon {
   &:hover {
     background: darken(white, 6%);
     cursor: pointer;
   }
+}
+
+.signupBtn {
+  color: white;
+  background-color: #3AAF9F;
 }
