--- a/custom-styles/sign-up-form/src/assets/scss/reset.scss
+++ b/custom-styles/sign-up-form/src/assets/scss/reset.scss
@@ -19,8 +19,8 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline;
 }
 
@@ -32,6 +32,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
   line-height: 1;
+  font-size: 20px/1.2;
 }
 
 ol, ul {
